# peanoclaw

./: .cproject  .gitignore  .gitmodules  .project  .sconsign.dblite  Area.cpp  CMakeLists.txt  Cell.h  GhostLayerCompositor.cpp  GhostLayerCompositor.h  GridLevelTransfer.cpp  GridLevelTransfer.h  Patch.cpp  Patch.h  PatchOperations.cpp  PatchPlotter.cpp  PatchPlotter.h  PyClaw.cpp  PyClaw.h  README.md  RegularGridState.def  SConstruct  SConstruct.orig  State.cpp  State.def  State.h  Vertex.cpp  Vertex.def  Vertex.h  VertexDescription.def  defaultMPIConfiguration.py  fullSWOF2DConfiguration.py  generateHeapData.sh  generatePeanoClaw.sh  license.txt  main.cpp  makefile  openMPIConfiguration.py  openMpiConfiguration.py  peanoConfiguration.py  (+10 more)
adapters/: Cleanup.cpp  Cleanup.h  GatherCurrentSolution.h  InitialiseGrid.cpp  InitialiseGrid.h  Plot.cpp  Remesh.cpp  Remesh.h  SolveTimestep.cpp  SolveTimestep.h  SolveTimestepAndPlot.h
apps/peano_acoustic_2d/: acoustic2D.py  setplot.py
apps/peano_acoustic_3d/: acoustics.py
apps/peano_acoustic_3d_heterogeneous/: acoustics.py  peanoclaw-config.xml
apps/peano_acoustic_3d_homogeneous/: acoustics.py  peanoclaw-config.xml
apps/peano_refinded_acoustic_3d_heterogeneous/: FractalTerrain.py  acoustics.py  assembleState.py  benchmark.py  ft_test.py  peanoclaw-config.xml  verify_acoustics.py
apps/shallow_2d/: peanoclaw-config.xml
blender/: marching.py  naturalSorting.py  peanoBlender.py  threadpool.py  vtkToBlender.py
configurations/: PeanoClawConfigurationForSpacetreeGrid.cpp
doc/: conceptSendingOnlyOverlap.txt  event_calls_during_fork.odg  overlappingRemoteGhostlayers.txt  triangleLinearization.txt
hdf5Viewer/: adaptive-0.hdf5  showHDF5.py
mappings/: Cleanup.cpp  Cleanup.h  GatherCurrentSolution.cpp  GatherCurrentSolution.h  InitialiseGrid.cpp  InitialiseGrid.h  Plot.h  Remesh.cpp  Remesh.h  SolveTimestep.cpp  SolveTimestep.h
messageExtractor/: ForkJoinCommunicationParser.py  HeapDataParser.py  LoadBalancingMessageParser.py  MasterWorkerCommunicationParser.py  Message.py  NeighbourCommunicationParser.py  Parser.py  StateMessageParser.py  extractMessageTimeline.py  nomessages.html  testPattern.py  threadpool.py
povray/: mesh.py  povray.py  test.py  wireframe.inc
records/: Cell.cpp  Cell.h  CellDescription.cpp  CellDescription.h  Data.cpp  RepositoryState.cpp  State.cpp  Vertex.cpp  VertexDescription.cpp  VertexDescription.h
repositories/: Repository.h  RepositoryArrayStack.cpp  RepositoryArrayStack.h  RepositorySTDStack.cpp  RepositorySTDStack.h
runners/: PeanoClawLibraryRunner.cpp  PeanoClawLibraryRunner.h  RunnerParallelWorker.cpp
scenarios/shallow_2d/: shallow_2d  shallow_2d.cpp
src/: Cell.cpp  CellDescription.def  GhostLayerCompositor.cpp  GridLevelTransfer.cpp  Patch.cpp  PatchOperations.h  PyClawCallbacks.h  State.cpp  State.h  Vertex.cpp  main.cpp
src/adapters/: GatherCurrentSolution.cpp  Plot.h  SolveTimestepAndPlot.cpp  SolveTimestepAndPlot.h
src/clawpack/peanoclaw/: Makefile  peano.py  solver.py
src/dastgen/: Cell.def  RepositoryState.def
src/mappings/: Cleanup.h  Plot.cpp  SolveTimestep.cpp  SolveTimestep.h
src/peanoclaw/: Area.cpp  Area.h  Cell.cpp  Cell.def  Cell.h  DimensionConvertor.py  Heap.h  Makefile  Numerics.cpp  Numerics.h  NumericsFactory.cpp  NumericsFactory.h  ParallelSubgrid.cpp  ParallelSubgrid.h  Patch.cpp  Patch.h  PatchOperations.cpp  PatchOperations.h  PatchPlotter.cpp  PatchPlotter.h  PeanoClawRepositoryState.def  Region.cpp  Region.h  RegularGridCell.def  RegularGridVertex.def  SpacetreeGridCell.def  SpacetreeGridState.def  SpacetreeGridVertex.def  State.cpp  State.h  Vertex.cpp  Vertex.h  VertexOperations.cpp  VertexOperations.h  converter.py  main.cpp  makefile  peano.py  solution.py  solver.py  (+1 more)
src/peanoclaw/adapters/: Cleanup.cpp  Cleanup.h  GatherCurrentSolution.cpp  GatherCurrentSolution.h  GatherCurrentSolutionAndValidateGrid.cpp  GatherCurrentSolutionAndValidateGrid.h  InitialiseAndValidateGrid.cpp  InitialiseAndValidateGrid.h  InitialiseGrid.cpp  InitialiseGrid.h  Plot.cpp  Plot.h  PlotAndValidateGrid.cpp  PlotAndValidateGrid.h  Query.cpp  Query.h  Remesh.cpp  Remesh.h  SolveTimestep.cpp  SolveTimestep.h  SolveTimestepAndPlot.cpp  ValidateGrid.cpp  (+6 more)
src/pyclaw/: controller.py
src/python/: __init__.py
src/records/: Data.cpp  Data.h  readme.txt
src/repositories/: RepositoryArrayStack.h  RepositoryFactory.cpp
src/runners/: PeanoClawLibraryRunner.h  Runner.cpp  Runner.h  RunnerParallelWorker.cpp
src/tests/: TestCase.cpp  TestCase.h
statistics/: LevelInformation.cpp  Probe.cpp
tests/: TestCase.cpp
testscenarios/: peanoclaw.logfilter  peanoclaw_nose_test.py  runPeanoClawTests.py  runWithTimelimit.py  test9x9PatchesOf16x16Cells.py
testscenarios/breakingDam/: error.py  filterOutput.sh  out.txt  peanoclaw.logfilter  runMPIDebug.sh  shallow2D.py
testscenarios/communicationOptimization/: results.txt  run.sh  shallow2D.py
testscenarios/hangingVertexInRegularlyRefinedGrid/: hangingVertexInRegularlyRefinedSubgrid.py
testscenarios/shockbubble3d/: shockbubble.py
testscenarios/swashes/: runShortChannel.sh
testscenarios/testParallelRun/: run.sh  shallow2DParallel.py
testscenarios/tools/: compareResult.py
tools/: SWE_WaveAccumulationBlock.cpp  buildSpecification.py  buildtools.py  createFullSWOF2DPatch.sh  fullswof2d-1.04.08.patch  fullswof2d.patch  parseParallelStatistics.py
tools/ControlLoopLoadBalancer/: CMakeLists.txt
tools/ControlLoopLoadBalancer/ControlLoopLoadBalancer/: ControlLoopLoadBalancer.cpp  ControlLoopLoadBalancer.h  DefaultControlLoopLoadBalancer.cpp  DefaultControlLoopLoadBalancer.h  FilterStrategy.cpp  FilterStrategy.h  GridStateData.cpp  GridStateData.h  History.h  HistorySet.h  OracleForOnePhaseControlLoopWrapper.cpp  OracleForOnePhaseControlLoopWrapper.h  Reductions.cpp  Reductions.h  Strategy.cpp  Strategy.h  WorkerData.cpp  WorkerData.h
tools/ControlLoopLoadBalancer/ControlLoopLoadBalancer/strategies/: JoinDueToEraseStrategy.cpp  JoinDueToEraseStrategy.h  ThresholdStrategy.cpp  ThresholdStrategy.cpp.orig  ThresholdStrategy.h
(+370 files in other folders)
